Fix z-index in section

--- a/src/stylesheets/css/Lungo.layout.css
+++ b/src/stylesheets/css/Lungo.layout.css
@@ -127,8 +127,7 @@ footer {
   left: 0;
   width: 100%;
   display: block;
-  z-index: 1;
-  overflow: hidden;
+  z-index: 2;
 }
 header {
   top: 0;
